# codedox

./: .dockerignore  .env.bk  .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTEXT_EXTRACTION_PLAN.md  DOCKER.md  DOCKER_TEST.md  Dockerfile  LICENSE  MIGRATION.md  README.md  SNIPPET_COUNT_FIX_SUMMARY.md  check_upload.py  cli.py  config.runtime.json.example  docker-compose.external-db.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  docker-logs.sh  docker-setup.sh  html_extraction_plan.md  migrate.py  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_docker_tests.sh  schema.sql  setup.sh  test_detection_comparison.py  test_docker_health.sh  test_docker_local.sh  test_extraction.py  test_filename_detection.py  (+13 more)
.github/workflows/: docs.yml
docker/: init-db.sh
docs/: FEATURES.md  README.md  _config.yml  index.md  upload-feature.md  upload-repo-updates-plan.md
docs/api/: rest.md
docs/development/: SETTINGS-FIX-PLAN.md  architecture.md  contributing.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
migrations/: README.md  add_markdown_fulltext_search.sql  add_upload_support.sql  simplify_statuses.sql
scripts/: migrate.sh  setup-frontend.sh  test_llm_config.py
src/: __init__.py  config.py  constants.py  runtime_settings.py
tests/: README.md  conftest.py  test_api_routes.py  test_auto_source_name_llm.py  test_code_extractor.py  test_code_formatter.py  test_code_formatting_preservation.py  test_code_in_description_fix.py  test_component_settings.py  test_comprehensive_code_extraction.py  test_crawl_health_monitor.py  test_crawl_job_deletion.py  test_crawl_job_management.py  test_crawl_recovery.py  test_crawl_restart.py  test_crawler_config.py  test_domain_uniqueness.py  test_failed_pages.py  test_formatter.py  test_github_llm_disabled.py  test_github_processor.py  test_html_code_extractor.py  test_html_extraction_refactor.py  test_html_upload.py  test_integration.py  test_job_cancellation.py  test_language_detection.py  test_language_detector.py  test_library_name_resolution.py  test_limit_handling.py  test_llm_language_detection.py  test_mcp_routes.py  test_mcp_streamable.py  test_progress_tracking.py  test_result_processor.py  test_result_processor_formatting.py  test_rst_extraction.py  test_rst_title_extraction.py  test_settings_infrastructure.py  test_settings_integration.py  (+8 more)
(+175 files in other folders)
